--- a/web/index.html
+++ b/web/index.html
@@ -150,7 +150,7 @@
 			  <h1 class="center title"><font color="white">Do you want more?</font></h1>
 			  
 			  <p class="lead center"><font color="white">Because you are Euroleague freak, click below</font></p>
-			  <p class="center"><a class="btn btn-success marginTop" href="/DB2FirstTry/index.html#footer" role="button">I Want More!</a></p>
+			  <p class="center"><a class="btn btn-success marginTop" href="/DB2FirstTry/MoreServlet" role="button">I Want More!</a></p>
 		  </div>
 		  
 	  </div>
